--- a/_sass/klise/_post.scss
+++ b/_sass/klise/_post.scss
@@ -108,11 +108,11 @@
     }
   }
 
-  > p {
-    margin: 0;
-    padding-top: $spacing-full - 15;
-    padding-bottom: $spacing-full - 15;
-  }
+  // > p {
+  //   margin: 0;
+  //   padding-top: $spacing-full - 15;
+  //   padding-bottom: $spacing-full - 15;
+  // }
 
   ul.task-list {
     list-style: none; 
