--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,7 +1,8 @@
 // Fonts preferences
-$sans-family: Roboto, sans-serif;
+$sans-family: Helvetica;
+// $sans-family: Roboto, sans-serif;
 $mono-family: Consolas, monospace;
-$base-font-size: 16px;
+$base-font-size: 18px;
 $medium-font-size: $base-font-size * 0.938;
 $small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.85;
@@ -24,7 +25,7 @@ $gray: #6b7886;
 $white: #fff;
 
 // Dark Colors
-$dark-text-base-color: #c7bebe;
+$dark-text-base-color: $white;
 $dark-text-link-blue: #ff5277;
 $dark-text-link-blue-active: #ff2957;
 
@@ -35,8 +36,8 @@ $dark-smoke: #4a4d56;
 $dark-gray: #767f87;
 
 // Width of the content area
-$wide-size: 890px;
-$narrow-size: 720px;
+$wide-size: 950px;
+$narrow-size: 950px;
 
 // Padding unit
 $spacing-full: 30px;
